--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lottie-web",
-  "version": "5.7.13",
+  "name": "lottie-web-lite-poc",
+  "version": "1.0.0",
   "description": "After Effects plugin for exporting animations to SVG + JavaScript or canvas + JavaScript",
-  "main": "./build/player/lottie.js",
+  "main": "./build/player/lottie_light.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/airbnb/lottie-web.git"
+    "url": "https://github.com/janeabernethy/lottie-web.git"
   },
   "scripts": {
     "build": "npx eslint ./player/js/**/* && node tasks/build.js",
@@ -29,5 +29,6 @@
     "watch": "^1.0.2"
   },
   "types": "./index.d.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "author": "jane.abernethy@hotmail.com"
 }
