--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lottie-web-lite-poc",
+  "name": "lottie-web-svg-light",
   "version": "1.0.0",
-  "description": "After Effects plugin for exporting animations to SVG + JavaScript or canvas + JavaScript",
+  "description": "After Effects plugin for exporting animations to SVG",
   "main": "./build/player/lottie_light.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/janeabernethy/lottie-web.git"
+    "url": "https://github.com/jmabernethy/lottie-web.git"
   },
   "scripts": {
     "build": "npx eslint ./player/js/**/* && node tasks/build.js",
@@ -14,7 +14,6 @@
   },
   "keywords": [
     "animation",
-    "canvas",
     "svg",
     "after effects",
     "plugin",
@@ -29,6 +28,5 @@
     "watch": "^1.0.2"
   },
   "types": "./index.d.ts",
-  "license": "MIT",
-  "author": "jane.abernethy@hotmail.com"
+  "license": "MIT"
 }
